lib/bait/tests/inout_error/generics/concrete_types_not_match.out
lib/bait/tests/inout_error/generics/concrete_types_not_match.in.bt:10:7 error: type i32 not matches []i32 in argument 2
lib/bait/tests/inout_error/generics/concrete_types_not_match.in.bt:14:3 error: type bool not matches string in argument 2
